test/Failing/InvalidPattern2.pi
module InvalidPattern where

data Unit : Type 1 :=
  unit: Unit

data Data : Type 1 :=
  One (Unit) (Unit) (Unit): Data

test : Data -> Unit
test = \d . case d of
  One u0 u1 u3 u4 -> unit